@@ -1,3 +1,12 @@
+2008-01-24: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Algorithm/*: implement wants_pre_signature_headers()
+   for each algorithm
+ * lib/Mail/DKIM/Verifier.pm: if the algorithm "wants_pre_signature_headers",
+   then feed headers found prior to the signature to the
+   signature-specific algorithm doing the verification. This fixes an
+   issue where signatures from cisco.com fail to verify (reported by
+   Mark Martinec).
+
 2008-01-10: Jason Long <jlong@messiah.edu>
  * Makefile.PL: bump version
  * lib/Mail/DKIM/Signature.pm: make sure all public key problems are
